refactor: Basic Checklist 조회 Logic 헥사고날 아키텍쳐로 변경